se actualiza el metodo de crear un eventos